<resources>
	<string name="app_name">RecyclerViewWithCardSystem</string>
	<string name="details">Details</string>
	<string name="description">Description</string>
	<string name="price">Price</string>
	<string name="rating">Rating</string>
	<string name="name">Name</string>
	<string name="id">ID</string>
	<string name="product_image">product image</string>
	<string name="no_data_available">Nothing to show</string>
</resources>