<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<LinearLayout
		android:gravity="center_vertical"
		android:layout_margin="5sp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/product_image"
			android:layout_width="100sp"
			android:layout_height="100sp"
			android:gravity="center_vertical"
			android:contentDescription="@string/product_image" />
		<LinearLayout
			android:layout_marginStart="10sp"
			android:layout_width="220sp"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:id="@+id/product_id"
				android:textSize="15sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/id"/>
			<TextView
				android:id="@+id/product_name"
				android:textSize="15sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/name"/>
			<LinearLayout
				android:gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView
					android:textSize="15sp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rating"/>
				<RatingBar
					android:id="@+id/product_rating"
					android:progressTint="#FDCC0D"
					android:isIndicator="true"
					android:layout_marginStart="5sp"
					android:numStars="5"
					style="?android:attr/ratingBarStyleSmall"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>
			<TextView
				android:id="@+id/product_price"
				android:textSize="15sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/price"/>
			<TextView
				android:id="@+id/product_description"
				android:textSize="15sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/description"/>
		</LinearLayout>
		<RelativeLayout
			android:layout_marginEnd="10sp"
			android:gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<ImageView
				android:background="@drawable/rounded_corner_cart_button"
				android:gravity="center"
				android:layout_width="140sp"
				android:layout_height="40sp"
				android:scaleType="center"
				
				android:id="@+id/add_to_cart_button"
				android:src="@drawable/ic_baseline_add_shopping_cart_24"
				android:layout_centerVertical="true"
				android:layout_alignParentEnd="true"/>
			
		</RelativeLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="2sp"
		style="@style/Divider.Horizontal"
		tools:ignore="SmallSp" />
</androidx.cardview.widget.CardView>